Bug 435810 - Format setting is not loaded (in Organize files)
Summary: Format setting is not loaded (in Organize files)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Metadata Editing and Reading (other bugs)
Version First Reported In: kf5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-16 11:59 UTC by robert marshall
Modified: 2024-05-06 15:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2021-04-16 11:59:15 UTC
SUMMARY


STEPS TO REPRODUCE
1. set filter to (say) format:ogg
2. open Organize files dialog and select format button (in the 'pulled down' area' you will see that no format value is set
3. Click OK - filter is now format: (with no value)

OBSERVED RESULT


EXPECTED RESULT
I'd expect the format value to be retained if nothing has changed.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION

I' think this is a long standing bug - I've just checked the Qt4 version of amarok and the same thing happens - is there a connect missing in TagDialog::initUi?
 Searches .. should this be a reopen of https://bugs.kde.org/show_bug.cgi?id=180376 ?
Comment 1 robert marshall 2021-04-16 12:15:48 UTC
Ah ignore that last comment referring to a possible duplicate, that's format rather than Format!
Comment 2 Myriam Schweingruber 2021-04-16 12:47:27 UTC
Do I guess correctly that you talk about the version from pgomes PPA?
Comment 3 Myriam Schweingruber 2021-04-16 12:48:53 UTC
FWIW: with "Organise files" having caused data loss in the past, I would abstain from using this in the Alpha version...
Comment 4 robert marshall 2021-04-16 12:54:28 UTC
(In reply to Myriam Schweingruber from comment #2)
> Do I guess correctly that you talk about the version from pgomes PPA?

That's correct!
Comment 5 robert marshall 2021-04-16 12:56:54 UTC
Sorry I mean in 'Edit track details' rather than Organize files - I *think* I've set the component correctly - and clearly in point 2 of the original report it should say 'Edit track details' dialog!
Comment 6 Myriam Schweingruber 2021-04-19 14:36:22 UTC
Thank you for the information, I can confirm this, setting the correct component
Comment 7 Bug Janitor Service 2024-05-05 21:51:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/94
Comment 8 Tuomas Nurmi 2024-05-06 15:15:07 UTC
Git commit 4583b886eb247dd0a9fe7be2686e860e6788adb3 by Tuomas Nurmi.
Committed on 06/05/2024 at 15:14.
Pushed by nurmi into branch 'master'.

Fix MetaQueryWidget to pre-select correct format

M  +2    -1    ChangeLog
M  +5    -1    src/dialogs/EditFilterDialog.cpp
M  +1    -1    src/widgets/MetaQueryWidget.cpp

https://invent.kde.org/multimedia/amarok/-/commit/4583b886eb247dd0a9fe7be2686e860e6788adb3