Fix MetaQueryWidget to pre-select correct format

BUG: 435810